Fix hotel autogrow and button align

--- a/9/css/style.css
+++ b/9/css/style.css
@@ -540,10 +540,6 @@ body {
 
 /* Accomodation */
 
-/* .accomodation {
-  padding-bottom: 70px;
-} */
-
 .accomodation__title {
   margin: 0;
   margin-bottom: 30px;
@@ -567,6 +563,7 @@ body {
 }
 
 .hotel {
+  flex-direction: column;
   background-color: #FFF;
   border-radius: 15px;
 }
@@ -591,6 +588,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   padding: 36px 45px 41px;
+  flex-grow: 1;
 }
 
 .hotel__price,
@@ -642,6 +640,7 @@ body {
 }
 
 .hotel__btn {
+  margin-top: auto;
   padding: 13px 20px;
 
   font-size: 16px;
